// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotButton should match snapshot when active 1`] = `
<button
  aria-label="Go to Home section"
  class="group relative block w-3 h-3 rounded-full border-2 transition-all duration-300 ease-in-out hover:scale-125 focus:outline-none focus:ring-2 focus:ring-stone-400 focus:ring-offset-2 dark:focus:ring-green-400 dark:focus:ring-offset-zinc-950 bg-stone-950 border-stone-950 scale-110 dark:bg-green-400 dark:border-green-400 dark:shadow-lg dark:shadow-green-400/20"
  type="button"
>
  <span
    class="absolute right-full mr-3 px-2 py-1 bg-stone-800 text-white text-xs rounded dark:bg-zinc-900 dark:text-green-200 dark:border dark:border-zinc-700 opacity-0 pointer-events-none transition-opacity duration-200 whitespace-nowrap top-1/2 -translate-y-1/2 group-hover:opacity-100"
  >
    Home
  </span>
</button>
`;

exports[`DotButton should match snapshot when inactive 1`] = `
<button
  aria-label="Go to Home section"
  class="group relative block w-3 h-3 rounded-full border-2 transition-all duration-300 ease-in-out hover:scale-125 focus:outline-none focus:ring-2 focus:ring-stone-400 focus:ring-offset-2 dark:focus:ring-green-400 dark:focus:ring-offset-zinc-950 bg-transparent border-stone-400 hover:border-stone-950 dark:border-zinc-600 dark:hover:border-green-400"
  type="button"
>
  <span
    class="absolute right-full mr-3 px-2 py-1 bg-stone-800 text-white text-xs rounded dark:bg-zinc-900 dark:text-green-200 dark:border dark:border-zinc-700 opacity-0 pointer-events-none transition-opacity duration-200 whitespace-nowrap top-1/2 -translate-y-1/2 group-hover:opacity-100"
  >
    Home
  </span>
</button>
`;
